--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is BY."
+title: "樱酱"
+description: "Hey, this is YJ."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -52,7 +52,7 @@ header-img: "img/post-bg-rwd.jpg"
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://qiubaiying.github.io">BY</a></li>
+   
     </ul>
 </div> -->
 
